@@ -1,19 +1,11 @@
 plugins {
     kotlin("jvm") version "2.2.10"
     kotlin("plugin.serialization") version "2.2.10"
-    application
     id("com.google.cloud.tools.jib") version "3.4.5"
 }
 
 group = "me.centralhardware"
 version = "1.0-SNAPSHOT"
-
-application {
-    mainClass.set("MainKt")
-    applicationDefaultJvmArgs = listOf(
-        "--add-opens=java.base/java.lang=ALL-UNNAMED"
-    )
-}
 
 repositories {
     mavenCentral()
@@ -54,7 +46,6 @@ jib {
         jvmFlags = listOf("-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0")
         creationTime = "USE_CURRENT_TIMESTAMP"
         labels = mapOf(
-            "org.opencontainers.image.title" to "airportweatherbot",
             "org.opencontainers.image.source" to (System.getenv("GITHUB_SERVER_URL")?.let { server ->
                 val repo = System.getenv("GITHUB_REPOSITORY")
                 if (repo != null) "$server/$repo" else ""
